Changelog
=========

0.3dev3 (unreleased)
-------------------
    - Also sanitise image links.
    - Fix resolveUid capitalised links generated by FCKeditor, these break TinyMCE.
    - Make resolving relative urls to UID's optional
    - Enable 'dry run' by default to avoid mistakes. 


0.1dev (unreleased)
-------------------

- Initial release