@@ -13,9 +13,6 @@ Installation
 
 Simply add pareto.uidfixer to your buildout.cfg::
 
-    find-links =
-        ...
-        https://dist.pareto.nl/public/
     eggs =
         ...
         pareto.uidfixer
