@@ -3,11 +3,16 @@ Changelog
 
 0.3dev3 (unreleased)
 -------------------
+
+    - Allow to skip portlet sanitising
+    - fix reporting of the field type
+    - pass if UID() cannot be called on the found new context
+    [fred]
     - Also sanitise image links.
     - Fix resolveUid capitalised links generated by FCKeditor, these break TinyMCE.
     - Make resolving relative urls to UID's optional
     - Enable 'dry run' by default to avoid mistakes. 
-
+    [fred]
 
 0.1dev (unreleased)
 -------------------
